methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:7: error: ';' expected but 'else' found.
      else {right() ; right() ; 
      ^